test/features/errors/semantic/e1056_invalid_range.spl
# E1056: Invalid Range

Feature: E1056 - Invalid Range Expression
  As a Simple compiler
  I want to detect invalid range expressions
  So that ranges have compatible types and valid bounds

  Background:
    Given I have the Simple compiler

  Scenario: Range with incompatible types
    When I compile:
      '''
      fn test():
        val r = 1.."10"  # Error: i32 and String incompatible
      '''
    Then I should see error E1056 at line 2
    And the error message should be "invalid range expression"
    And the label should indicate "invalid range"
    And the help should suggest "ensure range start <= end and both are compatible types"

  Scenario: Range with start > end
    When I compile:
      '''
      fn test():
        val r = 10..5  # Warning or error: start > end
      '''
    Then I should see error E1056

  Scenario: Valid range
    When I compile:
      '''
      fn test():
        val r1 = 0..10  # OK: exclusive range
        val r2 = 0..=10  # OK: inclusive range
      '''
    Then compilation should succeed

  Scenario: Korean language error
    Given I set compiler language to "ko"
    When I compile:
      '''
      fn test():
        val r = 1.."10"
      '''
    Then I should see error E1056
    And the error message should contain "잘못된 범위"
